--- a/Index.html
+++ b/Index.html
@@ -4,207 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Yassin Touaiti - Software Engineer CV</title>
-  <style>
-    :root {
-      --bg-color: #fff;
-      --text-color: #111;
-      --sidebar-bg: #f7f7f7;
-      --topbar-bg: #eaeaea;
-      --accent-color: #0077cc;
-    }
-    body.dark {
-      --bg-color: #121212;
-      --text-color: #e1e1e1;
-      --sidebar-bg: #1e1e1e;
-      --topbar-bg: #2c2c2c;
-      --accent-color: #3399ff;
-    }
-
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: var(--bg-color);
-      color: var(--text-color);
-      display: flex;
-      height: 100vh;
-      transition: background-color 0.3s ease, color 0.3s ease;
-      overflow: hidden;
-    }
-
-    .sidebar {
-      width: 230px;
-      background-color: var(--sidebar-bg);
-      padding: 30px 25px;
-      box-shadow: 2px 0 8px rgba(0,0,0,0.05);
-      transition: background-color 0.3s ease;
-      display: flex;
-      flex-direction: column;
-    }
-
-    .sidebar h2 {
-      margin-top: 0;
-      margin-bottom: 30px;
-      font-size: 1.8rem;
-      color: var(--accent-color);
-      letter-spacing: 1.5px;
-      font-weight: 700;
-    }
-
-    .sidebar a {
-      color: var(--text-color);
-      text-decoration: none;
-      font-weight: 600;
-      margin-bottom: 18px;
-      transition: color 0.3s ease;
-      cursor: pointer;
-    }
-
-    .sidebar a:hover {
-      color: var(--accent-color);
-      text-decoration: underline;
-    }
-
-    .main {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-    }
-
-    .topbar {
-      height: 70px;
-      background-color: var(--topbar-bg);
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 0 25px;
-      box-shadow: 0 2px 7px rgba(0,0,0,0.1);
-      transition: background-color 0.3s ease;
-    }
-
-    .topbar h1 {
-      font-weight: 700;
-      font-size: 1.7rem;
-      margin: 0;
-      color: var(--accent-color);
-      user-select: none;
-    }
-
-    .toggle-btn {
-      cursor: pointer;
-      background: none;
-      border: 2px solid var(--accent-color);
-      color: var(--accent-color);
-      padding: 8px 16px;
-      font-weight: 600;
-      border-radius: 6px;
-      transition: background-color 0.2s, color 0.2s;
-      user-select: none;
-    }
-    .toggle-btn:hover {
-      background-color: var(--accent-color);
-      color: var(--bg-color);
-    }
-
-    .content {
-      padding: 30px 40px;
-      overflow-y: auto;
-      flex-grow: 1;
-    }
-
-    h2.section-title {
-      color: var(--accent-color);
-      border-bottom: 2px solid var(--accent-color);
-      padding-bottom: 4px;
-      margin-bottom: 18px;
-      font-weight: 700;
-    }
-
-    p, ul {
-      line-height: 1.5;
-      margin-top: 0;
-    }
-
-    ul {
-      padding-left: 20px;
-    }
-
-    ul li {
-      margin-bottom: 8px;
-    }
-
-    .profile-photo {
-      width: 120px;
-      height: 120px;
-      border-radius: 50%;
-      object-fit: cover;
-      border: 3px solid var(--accent-color);
-      margin-bottom: 20px;
-      user-select: none;
-    }
-
-    .header-section {
-      display: flex;
-      align-items: center;
-      gap: 25px;
-      margin-bottom: 30px;
-    }
-
-    .header-details h3 {
-      margin: 0 0 6px 0;
-      font-size: 1.5rem;
-    }
-
-    .header-details p {
-      margin: 0;
-      font-weight: 600;
-      color: var(--text-color);
-      opacity: 0.7;
-    }
-
-    .skills-list {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-    }
-
-    .skill {
-      background-color: var(--accent-color);
-      color: var(--bg-color);
-      padding: 6px 14px;
-      border-radius: 20px;
-      font-weight: 600;
-      font-size: 0.9rem;
-      user-select: none;
-    }
-
-    @media (max-width: 800px) {
-      body {
-        flex-direction: column;
-        height: auto;
-      }
-      .sidebar {
-        width: 100%;
-        flex-direction: row;
-        overflow-x: auto;
-        padding: 10px 15px;
-        box-shadow: none;
-      }
-      .sidebar h2 {
-        flex: 0 0 auto;
-        margin: 0 15px 0 0;
-      }
-      .sidebar a {
-        flex: 0 0 auto;
-        margin: 0 12px 0 0;
-      }
-      .topbar {
-        height: 60px;
-      }
-      .content {
-        padding: 20px;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="Style.css" />
 </head>
 <body>
   <nav class="sidebar">
@@ -218,7 +18,7 @@
   <div class="main">
     <header class="topbar">
       <h1>Software Engineering Student</h1>
-      <button class="toggle-btn" onclick="toggleTheme()">Dark / Light</button>
+      <button class="toggle-btn" id="themeToggleBtn">Dark / Light</button>
     </header>
 
     <section class="content">
@@ -263,19 +63,14 @@
 
       <section id="contact" class="section">
         <h2 class="section-title">Contact</h2>
-        <p>Email: <a href="mailto:yassin.touaiti@example.com">yassin.touaiti@example.com</a></p>
+        <p>Email: <a href="mailto:yassin.touaiti.business@gmail.com">yassin.touaiti.business@gmail.com</a></p>
         <p>LinkedIn: <a href="https://linkedin.com/in/yassintouaiti" target="_blank" rel="noopener">linkedin.com/in/yassintouaiti</a></p>
-        <p>GitHub: <a href="https://github.com/yassintouaiti" target="_blank" rel="noopener">github.com/yassintouaiti</a></p>
-        <p>Phone number: <strong>+216 52 903 526</strong>></p>
-
-    </section>
+        <p>GitHub: <a href="https://github.com/yassin2k4" target="_blank" rel="noopener">https://github.com/yassin2k4</a></p>
+        <p>Phone number: <strong>+216 52 903 526</strong></p>
+      </section>
     </section>
   </div>
 
-  <script>
-    function toggleTheme() {
-      document.body.classList.toggle('dark');
-    }
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
