--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@ Gained hands-on experience in full-stack dev, collaboration with Git, and rapid 
         <section id="Contact" class="section" data-aos-delay="500" data-aos="fade-up" data-aos-duration="1500" >
             <h2 data-aos-delay="500" data-aos="fade-up" data-aos-duration="1500">Contact</h2>
             <div data-aos-delay="500" data-aos="fade-up" data-aos-duration="1500" class="proj">
-                <lable data-aos-delay="1000" data-aos="fade-up" data-aos-duration="1500">Phone : +216 52 903 526</lable><br><br>
-                <lable data-aos-delay="1000" data-aos="fade-up" data-aos-duration="1500">LinkeIn :</lable> <a href="https://www.linkedin.com/in/yassin-touaiti-6b5b63210/" >yassin-touaiti</a><br><br>
-                <lable data-aos-delay="1000" data-aos="fade-up" data-aos-duration="1500">Email : yassin.touaiti.business@gmail.com</lable><br><br>
-                <lable data-aos-delay="1000" data-aos="fade-up" data-aos-duration="1500">Github : </lable><a href="https://github.com/yassin2k4">github.com/yassin2k4</a><br><br>
+                <lable class="p1" data-aos-delay="1000" data-aos="fade-up" data-aos-duration="1500">Phone : +216 52 903 526</lable><br><br>
+                <lable class="p1" data-aos-delay="1000" data-aos="fade-up" data-aos-duration="1500">LinkeIn :</lable> <a class="p1" href="https://www.linkedin.com/in/yassin-touaiti-6b5b63210/" >yassin-touaiti</a><br><br>
+                <lable class="p1" data-aos-delay="1000" data-aos="fade-up" data-aos-duration="1500">Email : yassin.touaiti.business@gmail.com</lable><br><br>
+                <lable class="p1" data-aos-delay="1000" data-aos="fade-up" data-aos-duration="1500">Github : </lable><a class="p1" href="https://github.com/yassin2k4">github.com/yassin2k4</a><br><br>
                 
             </div>
            
