--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@ Gained hands-on experience in full-stack dev, collaboration with Git, and rapid 
             <h2 data-aos-delay="500" data-aos="fade-up" data-aos-duration="1500">Contact</h2>
             <div data-aos-delay="500" data-aos="fade-up" data-aos-duration="1500" class="proj">
                 <label data-aos-delay="1000" data-aos="fade-up" data-aos-duration="1500">Phone : +216 52 903 526</label><br><br>
-                <label data-aos-delay="1000" data-aos="fade-up" data-aos-duration="1500">LinkeIn :</label><a href="https://www.linkedin.com/in/yassin-touaiti-6b5b63210/" >yassin-touaiti</a><br><br>
-                <label data-aos-delay="1000" data-aos="fade-up" data-aos-duration="1500">Email : yassin.touaiti.business@gmail.com</lable><br><br>
-                <label data-aos-delay="1000" data-aos="fade-up" data-aos-duration="1500">Github : </label><a href="https://github.com/yassin2k4">github.com/yassin2k4</a><br><br>
+                <label data-aos-delay="1200" data-aos="fade-up" data-aos-duration="1500">LinkeIn :</label><a data-aos-delay="1200" data-aos="fade-up" data-aos-duration="1500" href="https://www.linkedin.com/in/yassin-touaiti-6b5b63210/" >yassin-touaiti</a><br><br>
+                <label data-aos-delay="1400" data-aos="fade-up" data-aos-duration="1500">Email : yassin.touaiti.business@gmail.com</lable><br><br>
+                <label data-aos-delay="1600" data-aos="fade-up" data-aos-duration="1500">Github : </label><a data-aos-delay="1600" data-aos="fade-up" data-aos-duration="1500" href="https://github.com/yassin2k4">github.com/yassin2k4</a><br><br>
                 
             </div>
            
