--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@ Passionate about coding, languages, and innovation. Always questioning the statu
                         <div class="slider-trackimg">
                             <img class="slideimg" src="imageh1.jpg" alt="Hackathon Image 1">
                             <img class="slideimg" src="imageh2.jpg" alt="Hackathon Image 2">
+                            <img class="slideimg" src="imageh3.jpg" alt="Hackathon Image 3">
                         </div>
                     </div>
                     <br>
