--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@ Passionate about coding, languages, and innovation. Always questioning the statu
         <section id="education" class="section" data-aos-delay="500" data-aos="fade-up" data-aos-duration="1500" >
             <h2 data-aos-delay="700" data-aos="fade" data-aos-duration="1500">Education</h2>
             <h5 data-aos-delay="700" data-aos="fade" data-aos-duration="1500" class="school">Higher Institute of Applied Languages and Computer Science of Beja (ISLAIB)</h5>
-            <h6 data-aos-delay="700" data-aos="fade" data-aos-duration="1500" style="margin-top: -4% ;">2023----->2026/UnderGraduate</h6>
+            <h6 data-aos-delay="700" data-aos="fade" data-aos-duration="1500">2023----->2026/UnderGraduate</h6>
             <p data-aos-delay="500" data-aos="fade-right" data-aos-duration="1500" id="p1" class="p1">
                 A public university that blends technical expertise with linguistic and interdisciplinary education. ISLAIB offers a unique curriculum focused on software engineering, applied languages, and information technology. The institute emphasizes hands-on learning, project-based development, and real-world problem solving, preparing students for careers in the fast-evolving tech landscape of Tunisia and beyond.
             </p>
             <h5 data-aos-delay="700" data-aos="fade" data-aos-duration="1500" class="school">Environmental Secondary School of Bousalem</h5>
-            <h6 data-aos-delay="700" data-aos="fade" data-aos-duration="1500" style="margin-top: -4% ;">2022----->2023/baccalaureate</h6>
+            <h6 data-aos-delay="700" data-aos="fade" data-aos-duration="1500">2022----->2023/baccalaureate</h6>
             <p data-aos-delay="500" data-aos="fade-left" data-aos-duration="1500" id="p2" class="p2">
 A specialized high school with a focus on environmental sciences, combining a strong academic foundation in natural sciences, mathematics, and technology. The school promotes environmental awareness, sustainability, and scientific inquiry, equipping students with the skills and mindset to address modern ecological challenges.            </p>
         </section>
